# coldtrace

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  README.md  diff.txt  git_version.h.in
.github/workflows/: CI_pipeline_actions.yml  actions-benchmark.yaml  actions-ohos.yml  actions.yml  github-CI-actions.yml
bench/: Makefile  common.mk
bench/leveldb/: Makefile
bench/patches/: 0002-enable-sanitizer.patch
bench/raytracing/: Makefile
bench/rendertri/: Makefile
bench/rendertri/patches/: 0001-add-parameter.patch  0002-enable-sanitizer.patch
bench/scratchapixel/: Makefile
examples/: write-write-race.c
gn/config/: BUILDCONFIG.gn
gn/scripts/: gen_dice_sources.py  run_gn_tests.py
gn/toolchain/: BUILD.gn
include/coldtrace/: aliases.h  config.h  counters.h  entries.h  thread.h  utils.h  version.h  version.h.in  writer.h
scripts/: bench-comparison.py  benchmark.sh  coldtrace  coldtrace-check  coldtracer  coverage  gn-ctest  procmaps.sh  trace_dump.py  traces-nonempty.sh
src/: BUILD.gn  CMakeLists.txt  coldthread.cpp  coldtrace.c  coldtrace.cpp  coldtrace.h  coldtrace.hpp  config.c  counters.c  entries.c  events.c  events.h  intercept_cxa.cpp  intercept_malloc.cpp  intercept_mman.cpp  intercept_pthread.cpp  intercept_sem.cpp  intercept_tsan.cpp  procmaps.c  single.cpp  subs_annotate_rwlock.c  subs_cxa.c  subs_malloc.c  subs_memcpy.c  subs_mman.c  subs_pthread.c  subs_sem.c  subs_tsan.c  thread.c  thread.cpp  utils.c  version.c  writer.c  writer.h
test/: BUILD.gn  CMakeLists.txt  annotate_test.cpp  atomic.cpp  atomic_test.cpp  cmp_xchg.cpp  create_test.c  envvar_test.c  foo.c  global_static_init.cpp  init_test.cpp  memmove_test.c  mutex_test.cpp  mutex_test_cppthreads.cpp  notify.cpp  nuclear_test.c  simple_malloc_test.c  simple_mmap_test.c  simple_mutex_test.c  spinlock.cpp  test.c  tls_test.c  trace_alloc_free.c  trace_annotate_rwlock.c  trace_aread_awrite_size.cpp  trace_atomic.cpp  trace_calloc.c  trace_create_join.c  trace_cxa_guard.cpp  trace_fail.c  trace_fence.cpp  trace_hb_check.cpp  trace_hb_check_2.cpp  trace_lock_unlock.c  trace_main_close.c  trace_memcpy.c  trace_mman.c  trace_mmap_test.c  trace_mutex_2.cpp  trace_pthread_cond_clockwait.c  (+13 more)
test/checkers/: indexes_checker.c  indexes_checker.cpp  indexes_checker.h  mock_checker.c  trace_checker.c  trace_checker.h  trace_checker_mock.c
